# quick_rate

./: Cargo.toml  README.md  settings.yml
src/: main.rs
src/auth/: auth.rs
src/req/: mod.rs  model.rs  req.rs
src/settings/: settings.rs
