[package]
name = "quick_rate"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_yaml = "0.9.34"
chrono = "0.4.39"
base64 = "0.22.1"
hmac = "0.13.0-pre.4"
sha2 = "0.11.0-pre.4"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
colored = "2.0"

